@@ -2,10 +2,14 @@ package com.koroFoods.reservationService.service;
 
 import com.koroFoods.reservationService.dto.ReservaDtoFeing;
 import com.koroFoods.reservationService.dto.ReservaRequest;
+import com.koroFoods.reservationService.dto.ReservaResponse;
 import com.koroFoods.reservationService.dto.ResultadoResponse;
 import com.koroFoods.reservationService.enums.EstadoReserva;
 import com.koroFoods.reservationService.enums.TipoReserva;
+import com.koroFoods.reservationService.feign.EventoFeign;
 import com.koroFoods.reservationService.feign.EventoFeignClient;
+import com.koroFoods.reservationService.feign.MesaFeign;
+import com.koroFoods.reservationService.feign.MesaFeignClient;
 import com.koroFoods.reservationService.feign.PedidoFeignClient;
 import com.koroFoods.reservationService.feign.UsuarioFeign;
 import com.koroFoods.reservationService.feign.UsuarioFeignClient;
@@ -19,6 +23,7 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -26,210 +31,237 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class ReservaService {
 
-    private final IReservaRepository reservaRepository;
-    private final UsuarioFeignClient usuarioFeignClient;
-    private final PedidoFeignClient pedidoFeignClient;
+	private final IReservaRepository reservaRepository;
+	private final UsuarioFeignClient usuarioFeignClient;
+	private final PedidoFeignClient pedidoFeignClient;
 
-    private final EventoFeignClient eventoFeignClient;
+	private final EventoFeignClient eventoFeignClient;
+	private final MesaFeignClient mesaFeignClient;
 
-    public ResultadoResponse<Integer> registrarReserva(ReservaRequest request) {
+	public ResultadoResponse<Integer> registrarReserva(ReservaRequest request) {
 
-        boolean esEvento = request.getIdEvento() != null;
+		boolean esEvento = request.getIdEvento() != null;
 
-        LocalDateTime inicio = request.getFechaHora();
-        LocalDateTime fin = inicio.plusHours(esEvento ? 3 : 2);
+		LocalDateTime inicio = request.getFechaHora();
+		LocalDateTime fin = inicio.plusHours(esEvento ? 3 : 2);
 
-        if (esEvento) {
-            ResultadoResponse<Boolean> response =
-                    eventoFeignClient.validarHorariosParaReservaConEvento(
-                            request.getIdMesa(),
-                            request.getIdEvento(),
-                            inicio,
-                            fin
-                    );
+		if (esEvento) {
+			ResultadoResponse<Boolean> response = eventoFeignClient
+					.validarHorariosParaReservaConEvento(request.getIdMesa(), request.getIdEvento(), inicio, fin);
 
-            if (!response.isValor() || !Boolean.TRUE.equals(response.getData())) {
-                return ResultadoResponse.error(
-                        "La mesa no está asignada al evento seleccionado"
-                );
-            }
+			if (!response.isValor() || !Boolean.TRUE.equals(response.getData())) {
+				return ResultadoResponse.error("La mesa no está asignada al evento seleccionado");
+			}
 
+		}
 
-        }
+		boolean ocupada = reservaRepository.existeSolapamientoReserva(request.getIdMesa(), inicio, fin);
 
-        boolean ocupada = reservaRepository.existeSolapamientoReserva(
-                request.getIdMesa(),
-                inicio,
-                fin
-        );
+		if (ocupada) {
+			return ResultadoResponse.error("La mesa ya se encuentra reservada en el horario seleccionado");
+		}
 
-        if (ocupada) {
-            return ResultadoResponse.error(
-                    "La mesa ya se encuentra reservada en el horario seleccionado"
-            );
-        }
+		Reserva reserva = new Reserva();
+		reserva.setIdUsuario(request.getIdUsuario());
+		reserva.setIdMesa(request.getIdMesa());
+		reserva.setIdEvento(request.getIdEvento());
+		reserva.setTipoReserva(reserva.getIdEvento() != null ? TipoReserva.ESPECIAL : TipoReserva.SIMPLE);
+		reserva.setFechaHora(inicio);
+		reserva.setEstado(EstadoReserva.PENDIENTE);
+		reserva.setFechaRegistro(LocalDateTime.now());
+		reserva.setObservaciones(request.getObservaciones());
+		reserva.setVerificado(false);
 
-        Reserva reserva = new Reserva();
-        reserva.setIdUsuario(request.getIdUsuario());
-        reserva.setIdMesa(request.getIdMesa());
-        reserva.setIdEvento(request.getIdEvento());
-        reserva.setTipoReserva(
-                reserva.getIdEvento() != null
-                        ? TipoReserva.ESPECIAL
-                        : TipoReserva.SIMPLE
-        );
-        reserva.setFechaHora(inicio);
-        reserva.setEstado(EstadoReserva.PENDIENTE);
-        reserva.setFechaRegistro(LocalDateTime.now());
-        reserva.setObservaciones(request.getObservaciones());
-        reserva.setVerificado(false);
+		reservaRepository.save(reserva);
 
-        reservaRepository.save(reserva);
+		return ResultadoResponse.success("Reserva registrada correctamente. Pendiente de pago.",
+				reserva.getIdReserva());
+	}
 
-        return ResultadoResponse.success(
-                "Reserva registrada correctamente. Pendiente de pago.",
-                reserva.getIdReserva()
-        );
-    }
+	public ResultadoResponse<ReservaDtoFeing> getReservationByID(String codigo) {
+		Optional<Reserva> optionalReserva = reservaRepository.findReservaAsistidaById(codigo);
 
-    public ResultadoResponse<ReservaDtoFeing> getReservationByID(String codigo) {
-        Optional<Reserva> optionalReserva = reservaRepository.findReservaAsistidaById(codigo);
+		if (optionalReserva.isEmpty()) {
+			return ResultadoResponse.error("Reserva no encontrada, intente con otro código por favor");
+		}
 
-        if (optionalReserva.isEmpty()) {
-            return ResultadoResponse.error("Reserva no encontrada, intente con otro código por favor");
-        }
+		Reserva reserva = optionalReserva.get();
 
-        Reserva reserva = optionalReserva.get();
+		try {
+			var pedidoResponse = pedidoFeignClient.getPedidoByIdReserva(reserva.getIdReserva());
 
-        try {
-            var pedidoResponse = pedidoFeignClient.getPedidoByIdReserva(reserva.getIdReserva());
+			if (pedidoResponse.isValor() && pedidoResponse.getData() != null) {
+				return ResultadoResponse.error("Esta reserva ya tiene un pedido asociado.");
+			}
+		} catch (FeignException.NotFound e) {
 
-            if (pedidoResponse.isValor() && pedidoResponse.getData() != null) {
-                return ResultadoResponse.error("Esta reserva ya tiene un pedido asociado.");
-            }
-        } catch (FeignException.NotFound e) {
+		} catch (Exception e) {
+			return ResultadoResponse.error("Error al validar el pedido de la reserva: " + e.getMessage());
+		}
 
-        } catch (Exception e) {
-            return ResultadoResponse.error("Error al validar el pedido de la reserva: " + e.getMessage());
-        }
+		var usuario = usuarioFeignClient.getUsuarioById(reserva.getIdUsuario());
 
-        var usuario = usuarioFeignClient.getUsuarioById(reserva.getIdUsuario());
+		if (!usuario.isValor() || usuario.getData() == null) {
+			return ResultadoResponse.error("El usuario con ID " + reserva.getIdUsuario() + " no existe");
+		}
 
-        if (!usuario.isValor() || usuario.getData() == null) {
-            return ResultadoResponse.error("El usuario con ID " + reserva.getIdUsuario() + " no existe");
-        }
+		ReservaDtoFeing dto = new ReservaDtoFeing();
+		dto.setIdReserva(reserva.getIdReserva());
+		dto.setEstado(reserva.getEstado().toString());
+		dto.setIdUsuario(reserva.getIdUsuario());
+		dto.setMesa(reserva.getIdMesa());
+		dto.setNombreCompletoUsuario(usuario.getData().getNombres() + " " + usuario.getData().getApePaterno() + " "
+				+ usuario.getData().getApeMaterno());
 
-        ReservaDtoFeing dto = new ReservaDtoFeing();
-        dto.setIdReserva(reserva.getIdReserva());
-        dto.setEstado(reserva.getEstado().toString());
-        dto.setIdUsuario(reserva.getIdUsuario());
-        dto.setMesa(reserva.getIdMesa());
-        dto.setNombreCompletoUsuario(usuario.getData().getNombres() + " " + usuario.getData().getApePaterno() + " "
-                + usuario.getData().getApeMaterno());
+		return ResultadoResponse.success("Reserva encontrada", dto);
+	}
 
-        return ResultadoResponse.success("Reserva encontrada", dto);
-    }
+	public ResultadoResponse<List<ReservaResponse>> listarReservasPorCliente(Integer idUsuario) {
+		List<Reserva> reservas = reservaRepository.findByIdUsuario(idUsuario);
 
-    /*
-     * Reserva Simple----- Horario local (12:00 – 23:00) generarSlots
-     * filtrarSlotsDisponibles frontend muestra horas libres usuario elige una
-     * mesaOcupadaPorReserva (check final)
-     *
-     *
-     * Reserva Especial---- Horario evento (19:00 – 22:00) generarSlots
-     * filtrarSlotsDisponibles usuario elige mesaOcupadaPorReserva
-     *
-     */
+		if (reservas.isEmpty()) {
+			return ResultadoResponse.error("El usuario no tiene reservas registradas");
+		}
+		List<ReservaResponse> response = reservas.stream().map(reserva -> {
+			ReservaResponse dto = new ReservaResponse();
 
-    private int obtenerDuracionHoras(boolean esEvento) {
-        return esEvento ? 3 : 2;
-    }
+			dto.setIdReserva(reserva.getIdReserva());
+			dto.setTipoReserva(reserva.getTipoReserva());
+			dto.setFechaHora(reserva.getFechaHora());
+			dto.setEstado(reserva.getEstado());
+			dto.setObservaciones(reserva.getObservaciones());
 
-    // 1
-    private List<LocalDateTime> generarSlots(LocalDateTime desde, LocalDateTime hasta, int intervaloMinutos) {
+			ResultadoResponse<UsuarioFeign> usuarioResult = usuarioFeignClient.getUsuarioById(reserva.getIdUsuario());
 
-        List<LocalDateTime> slots = new ArrayList<>();
-        LocalDateTime actual = desde;
+			if (usuarioResult.isValor() && usuarioResult.getData() != null) {
+				UsuarioFeign usuario = usuarioResult.getData();
+				dto.setNombreCli(usuario.getNombres());
+				dto.setApellidoPa(usuario.getApePaterno());
+				dto.setApellidoMa(usuario.getApeMaterno());
+			}
 
-        while (!actual.isAfter(hasta)) {
-            slots.add(actual);
-            actual = actual.plusMinutes(intervaloMinutos);
-        }
+			ResultadoResponse<MesaFeign> mesaResult = mesaFeignClient.obtenerMesaPorId(reserva.getIdMesa());
 
-        return slots;
-    }
+			if (mesaResult.isValor() && mesaResult.getData() != null) {
+				MesaFeign mesa = mesaResult.getData();
+				dto.setNumMesa(mesa.getNumeroMesa());
+				dto.setCapacidad(mesa.getCapacidad());
+				dto.setZona(mesa.getTipo());
+			}
 
-    // 2
-    private List<LocalDateTime> filtrarSlotsDisponibles(Integer idMesa, List<LocalDateTime> slots, boolean esEvento) {
+			if (reserva.getIdEvento() != null) {
+				ResultadoResponse<EventoFeign> eventoResult = eventoFeignClient.obtenerEvento(reserva.getIdEvento());
 
-        int duracionHoras = obtenerDuracionHoras(esEvento);
+				if (eventoResult.isValor() && eventoResult.getData() != null) {
+					EventoFeign evento = eventoResult.getData();
+					dto.setIdEvento(evento.getIdEvento());
+					dto.setNombreEvento(evento.getNombre());
+					dto.setFechaInicio(evento.getFechaInicio());
+					dto.setFechaFin(evento.getFechaFin());
+				}
+			}
 
-        return slots.stream().filter(slot -> {
-            LocalDateTime fin = slot.plusHours(duracionHoras);
-            return !reservaRepository.existeSolapamientoReserva(idMesa, slot, fin);
-        }).toList();
-    }
+			return dto;
+		}).collect(Collectors.toList());
 
-    // 3 - Controller
-    public List<LocalDateTime> obtenerSlotsDisponibles(Integer idMesa, LocalDateTime desde, LocalDateTime hasta,
-                                                       Integer idEvento) {
+		return ResultadoResponse.success("Reservas obtenidas correctamente", response);
+	}
 
-        boolean esEvento = idEvento != null;
+	/*
+	 * Reserva Simple----- Horario local (12:00 – 23:00) generarSlots
+	 * filtrarSlotsDisponibles frontend muestra horas libres usuario elige una
+	 * mesaOcupadaPorReserva (check final)
+	 *
+	 *
+	 * Reserva Especial---- Horario evento (19:00 – 22:00) generarSlots
+	 * filtrarSlotsDisponibles usuario elige mesaOcupadaPorReserva
+	 *
+	 */
 
-        // 1️ Validar contra EVENTO_MESA SOLO si es evento
-        if (esEvento) {
-            try {
-                ResultadoResponse<Boolean> response =
-                        eventoFeignClient.validarHorariosParaReservaConEvento(
-                                idMesa, idEvento, desde, hasta
-                        );
+	private int obtenerDuracionHoras(boolean esEvento) {
+		return esEvento ? 3 : 2;
+	}
 
-                if (!response.isValor() || !Boolean.TRUE.equals(response.getData())) {
-                    return List.of();
-                }
-            } catch (FeignException e) {
-                return List.of(); // evento no accesible → no habilitar slots
-            }
+	// 1
+	private List<LocalDateTime> generarSlots(LocalDateTime desde, LocalDateTime hasta, int intervaloMinutos) {
 
-        }
+		List<LocalDateTime> slots = new ArrayList<>();
+		LocalDateTime actual = desde;
 
-        List<LocalDateTime> slots = generarSlots(desde, hasta, 30);
+		while (!actual.isAfter(hasta)) {
+			slots.add(actual);
+			actual = actual.plusMinutes(intervaloMinutos);
+		}
 
-        return filtrarSlotsDisponibles(idMesa, slots, esEvento);
-    }
+		return slots;
+	}
 
-    // Validar cuando el cliente haya eligido una hora/fecha
-    public boolean mesaOcupadaPorReserva(Integer idMesa, LocalDateTime fechaInicio, boolean esEvento) {
+	// 2
+	private List<LocalDateTime> filtrarSlotsDisponibles(Integer idMesa, List<LocalDateTime> slots, boolean esEvento) {
 
-        int duracion = obtenerDuracionHoras(esEvento);
+		int duracionHoras = obtenerDuracionHoras(esEvento);
 
-        return reservaRepository.existeSolapamientoReserva(idMesa, fechaInicio, fechaInicio.plusHours(duracion));
-    }
+		return slots.stream().filter(slot -> {
+			LocalDateTime fin = slot.plusHours(duracionHoras);
+			return !reservaRepository.existeSolapamientoReserva(idMesa, slot, fin);
+		}).toList();
+	}
 
+	// 3 - Controller
+	public List<LocalDateTime> obtenerSlotsDisponibles(Integer idMesa, LocalDateTime desde, LocalDateTime hasta,
+			Integer idEvento) {
 
-    public ResultadoResponse<UsuarioFeign> obtenerUsuarioPorReserva(Integer idReserva) {
+		boolean esEvento = idEvento != null;
 
-        validarId(idReserva);
+		// 1️ Validar contra EVENTO_MESA SOLO si es evento
+		if (esEvento) {
+			try {
+				ResultadoResponse<Boolean> response = eventoFeignClient.validarHorariosParaReservaConEvento(idMesa,
+						idEvento, desde, hasta);
 
-        Reserva reservaObtenida = obtenerReserva(idReserva);
-        ResultadoResponse<UsuarioFeign> cliente = usuarioFeignClient.getUsuarioById(reservaObtenida.getIdUsuario());
-        var clienteData = cliente.getData();
+				if (!response.isValor() || !Boolean.TRUE.equals(response.getData())) {
+					return List.of();
+				}
+			} catch (FeignException e) {
+				return List.of(); // evento no accesible → no habilitar slots
+			}
 
-        return ResultadoResponse.success("Se obtuvo al cliente ", clienteData);
-    }
+		}
 
+		List<LocalDateTime> slots = generarSlots(desde, hasta, 30);
 
-    private Reserva obtenerReserva(Integer idReserva) {
-        validarId(idReserva);
-        return reservaRepository.findById(idReserva)
-                .orElseThrow(() -> new RuntimeException("Error al obtener la reserva" + idReserva));
-    }
+		return filtrarSlotsDisponibles(idMesa, slots, esEvento);
+	}
 
+	// Validar cuando el cliente haya eligido una hora/fecha
+	public boolean mesaOcupadaPorReserva(Integer idMesa, LocalDateTime fechaInicio, boolean esEvento) {
 
-    private void validarId(Integer request) {
-        if (request == null || request <= 0) {
-            throw new IllegalArgumentException("ID invalido");
-        }
-    }
+		int duracion = obtenerDuracionHoras(esEvento);
+
+		return reservaRepository.existeSolapamientoReserva(idMesa, fechaInicio, fechaInicio.plusHours(duracion));
+	}
+
+	public ResultadoResponse<UsuarioFeign> obtenerUsuarioPorReserva(Integer idReserva) {
+
+		validarId(idReserva);
+
+		Reserva reservaObtenida = obtenerReserva(idReserva);
+		ResultadoResponse<UsuarioFeign> cliente = usuarioFeignClient.getUsuarioById(reservaObtenida.getIdUsuario());
+		var clienteData = cliente.getData();
+
+		return ResultadoResponse.success("Se obtuvo al cliente ", clienteData);
+	}
+
+	private Reserva obtenerReserva(Integer idReserva) {
+		validarId(idReserva);
+		return reservaRepository.findById(idReserva)
+				.orElseThrow(() -> new RuntimeException("Error al obtener la reserva" + idReserva));
+	}
+
+	private void validarId(Integer request) {
+		if (request == null || request <= 0) {
+			throw new IllegalArgumentException("ID invalido");
+		}
+	}
 
 }
